--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -18,49 +18,25 @@ Each implementation of DRS can choose its own id scheme, as long as it follows t
 
 === DRS URIs
 
-For convenience, including when passing content references to a WES server, we define a
-https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax[URI scheme]
-for DRS-accessible content See https://tools.ietf.org/html/rfc3986#section-3.1[RFC 3986 § 3.1].
-We felt it was important to introduce a DRS scheme for URIs
-since it signals to systems consuming these URIs that the response they will ultimately
-receive, once transforming the URI to a fetchable URL, will be a DRS JSON.
-If we had gone with a Compact URI (CURIE) we felt that this would have been more
-difficult for systems consuming DRS objects to understand and differentiate them
-given the ubiquitous use of CURIEs in the research community and the fact that
-CURIEs can point to a wide variety of entities (HTML documents, PDFs, identities in data
-models, etc).
+For convenience, including when passing content references to a WES server, we define a https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax[URI scheme] for DRS-accessible content See https://tools.ietf.org/html/rfc3986#section-3.1[RFC 3986 § 3.1]. We felt it was important to introduce a DRS scheme for URIs since it signals to systems consuming these URIs that the response they will ultimately receive, once transforming the URI to a fetchable URL, will be a DRS JSON. If we had gone with a Compact URI (CURIE) we felt that this would have been more difficult for systems consuming DRS objects to understand and differentiate them given the ubiquitous use of CURIEs in the research community and the fact that CURIEs can point to a wide variety of entities (HTML documents, PDFs, identities in data models, etc).
 
-There are two styles of DRS URI based on whether or not a compact identifier is used:
-Hostname-based and Compact Identifier-based.
+There are two styles of DRS URI based on whether or not a compact identifier is used: Hostname-based and Compact Identifier-based.
 
 ==== Compact Identifier-based DRS URIs
 
-Compact identifiers refer to locally-unique persistent identifiers that have been
-namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent
- guide to this topic.  We support the use of compact identifiers in DRS URIs since many
-resources in the research community issue these identifiers of a variety of formats.
+Compact identifiers refer to locally-unique persistent identifiers that have been namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent guide to this topic.  We support the use of compact identifiers in DRS URIs since many resources in the research community issue these identifiers of a variety of formats.
 
-When combined with the resolver registry services of
-https://identifiers.org/[identifiers.org] / https://n2t.net/[n2t.net (Name-To-Thing)],
-we can support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc)
-and also allow for the resolution of
-DRS objects without needing to use a hostname in the URI.  By using compact identifiers with a resolver
-registry, systems using DRS URIs can identify the current resolver when needed.
-This allows a project to issue compact identifiers in DRS URIs and not be concerned
-if the project name or hostname change in the future since the current resolver can always
-be found through the identifiers.org/n2t.net registries.
+When combined with the resolver registry services of https://identifiers.org/[identifiers.org] / https://n2t.net/[n2t.net (Name-To-Thing)], we can support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc) and also allow for the resolution of DRS objects without needing to use a hostname in the URI.  By using compact identifiers with a resolver registry, systems using DRS URIs can identify the current resolver when needed. This allows a project to issue compact identifiers in DRS URIs and not be concerned if the project name or hostname change in the future since the current resolver can always be found through the identifiers.org/n2t.net registries.
 
-To make this work we embrace the CURIE format used by identifiers.org/n2t.net.  Compact
-identifiers have the form:
+To make this work we embrace the CURIE format used by identifiers.org/n2t.net.  Compact identifiers have the form:
 
     prefix:accession
 
-The prefix can be divided into an optional provider code and the namespace.  The accession here is an Ark,
-DOI, Data GUID ID, or one of the ~700 compact identifiers in the identifiers.org/n2t.net system:
+The prefix can be divided into an optional provider code and the namespace.  The accession here is an Ark, DOI, Data GUID ID, or one of the ~700 compact identifiers in the identifiers.org/n2t.net system:
 
     [provider_code/]namespace:ID
 
-Examples include (from n2t.net):
+https://n2t.net/e/compact_ids.html [Examples] include (from n2t.net):
 
 		PDB:2gc4
 		Taxon:9606
@@ -68,14 +44,10 @@ Examples include (from n2t.net):
 		ark:/47881/m6g15z54
 		IGSN:SSH000SUA
 
----
-**NOTE**
-If your DRS implementation will issue IDs and pass around references with DRS URIs
-with compact identifiers you *must* register your prefix on identifiers.org/n2t.net
-otherwise DRS clients will not know how to resolve your compact identifiers and,
-ultimately, generate a DRS URL that can be accessed.
-
----
+.NOTE
+****
+If your DRS implementation will issue IDs and pass around references with DRS URIs with compact identifiers you *must* register your prefix on identifiers.org/n2t.net otherwise DRS clients will not know how to resolve your compact identifiers and, ultimately, generate a DRS URL that can be accessed.
+****
 
 Translating the identifiers.org/n2t.net to DRS URIs we get the following URI form:
 
