--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -1,6 +1,6 @@
 == Introduction
 
-The Data Repository Service (DRS) API provides a generic interface to data repositories so data consumers, including workflow systems, can access data in a single, standard way regardless of where it's stored and how it's managed. This document describes the DRS API and provides details on the specific endpoints, request formats, and responses. It is intended for developers of DRS-compatible services and of clients that will call these DRS services.
+The Data Repository Service (DRS) API provides a generic interface to data object repositories so data consumers, including workflow systems, can access data in a single, standard way regardless of where it's stored and how it's managed. This document describes the DRS API and provides details on the specific endpoints, request formats, and responses. It is intended for developers of DRS-compatible services and of clients that will call these DRS services.
 
 The primary functionality of DRS is to map a logical ID to a means for physically retrieving the data represented by the ID. The sections below describe the characteristics of those IDs, the types of data supported, and how the mapping works.
 
@@ -11,32 +11,34 @@ The primary functionality of DRS is to map a logical ID to a means for physicall
 Each implementation of DRS can choose its own id scheme, as long as it follows these guidelines:
 
 * DRS IDs are strings made up of uppercase and lowercase letters, decimal digits, hypen, period, underscore and tilde [A-Za-z0-9.-_~]. See https://tools.ietf.org/html/rfc3986#section-2.3[RFC 3986 § 2.3].
-* Note to server implementors: internal IDs can contain other characters, but they MUST be encoded into valid DRS IDs whenever exposed by the API.  This is because non-URL encoded IDs may interfere with the interpretation of the `objects/{id}/access` endpoint.  To overcome this limitation use percent-encoding of the ID. See https://tools.ietf.org/html/rfc3986#section-2.4[RFC 3986 § 2.4]
+* Note to server implementors: internal IDs can contain other characters, but they MUST be encoded into valid DRS IDs whenever exposed by the API.  This is because non-URL encoded IDs may interfere with the interpretation of the `objects/{id}/access` endpoint.  To overcome this limitation use percent-encoding of the ID, see https://tools.ietf.org/html/rfc3986#section-2.4[RFC 3986 § 2.4]
 * One DRS ID MUST always return the same object data (or, in the case of a collection, the same set of objects). This constraint aids with reproducibility.
-* DRS v1 does NOT support semantics around multiple versions of an object. (For example, there’s no notion of “get latest version” or “list all versions”.) Individual implementation MAY choose an ID scheme that includes version hints.
+* DRS version 1.x does NOT support semantics around multiple versions of an object. (For example, there’s no notion of “get latest version” or “list all versions”.) Individual implementation MAY choose an ID scheme that includes version hints.
 * DRS implementations MAY have more than one ID that maps to the same object.
 
 === DRS URIs
 
-For convenience, including when passing content references to a WES server, we define a https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax[URI scheme] for DRS-accessible content See https://tools.ietf.org/html/rfc3986#section-3.1[RFC 3986 § 3.1]. We felt it was important to introduce a DRS scheme for URIs since it signals to systems consuming these URIs that the response they will ultimately receive, once transforming the URI to a fetchable URL, will be a DRS JSON. If we had gone with a Compact URI (CURIE) we felt that this would have been more difficult for systems consuming DRS objects to understand and differentiate them given the ubiquitous use of CURIEs in the research community and the fact that CURIEs can point to a wide variety of entities (HTML documents, PDFs, identities in data models, etc).
+For convenience, including when passing content references to a WES server, we define a https://en.wikipedia.org/wiki/Uniform_Resource_Identifier#Generic_syntax[URI scheme] for DRS-accessible content. See https://tools.ietf.org/html/rfc3986#section-3.1[RFC 3986 § 3.1]. _We felt it was important to introduce a DRS scheme for URIs since it signals to systems consuming these URIs that the response they will ultimately receive, once transforming the URI to a fetchable URL, will be a DRS JSON._ If we had gone with a https://en.wikipedia.org/wiki/CURIE[Compact URI (CURIE)] we felt that this would have been more difficult for systems consuming DRS objects to understand and differentiate them given the ubiquitous use of CURIEs in the research community and the fact that CURIEs can point to a wide variety of entities (HTML documents, PDFs, identities in data models, etc).
 
-There are two styles of DRS URI based on whether or not a compact identifier is used: Hostname-based and Compact Identifier-based.
+There are two styles of DRS URIs: Hostname-based and Compact Identifier-based, both use the `drs://` scheme.
 
 ==== Compact Identifier-based DRS URIs
 
-Compact identifiers refer to locally-unique persistent identifiers that have been namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent guide to this topic.  We support the use of compact identifiers in DRS URIs since many resources in the research community issue these identifiers of a variety of formats.
+Compact identifiers refer to locally-unique persistent identifiers that have been namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent introduction to this topic.  We support the use of compact identifiers in DRS URIs since many resources in the research community issue these identifiers in a variety of formats.
 
-When combined with the resolver registry services of https://identifiers.org/[identifiers.org] / https://n2t.net/[n2t.net (Name-To-Thing)], we can support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc) and also allow for the resolution of DRS objects without needing to use a hostname in the URI.  By using compact identifiers with a resolver registry, systems using DRS URIs can identify the current resolver when needed. This allows a project to issue compact identifiers in DRS URIs and not be concerned if the project name or hostname change in the future since the current resolver can always be found through the identifiers.org/n2t.net registries.
+When combined with the resolver registry services of https://identifiers.org/[identifiers.org] or https://n2t.net/[n2t.net (Name-To-Thing)], we can support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc) and also allow for the resolution of DRS objects without needing to use a hostname in the URI.  By using compact identifiers with a resolver registry, systems using DRS URIs can identify the current resolver when needed. This allows a project to issue compact identifiers in DRS URIs and not be concerned if the project name or DRS hostname change in the future since the current resolver can always be found through the identifiers.org/n2t.net registries.  Together the identifiers.org/n2t.net systems support the resolver lookup for over 700 compact identifiers formats.
 
-To make this work we embrace the CURIE format used by identifiers.org/n2t.net.  Compact identifiers have the form:
+To make this work we leverage the CURIE format used by identifiers.org/n2t.net.  Compact identifiers have the form:
 
     prefix:accession
 
-The prefix can be divided into an optional provider code and the namespace.  The accession here is an Ark, DOI, Data GUID ID, or one of the ~700 compact identifiers in the identifiers.org/n2t.net system:
+The prefix can be divided into an optional provider code and the namespace.  The accession here is an Ark, DOI, Data GUID-issued ID for the object being pointed to:
 
-    [provider_code/]namespace:ID
+    [provider_code/]namespace:accession
 
-https://n2t.net/e/compact_ids.html [Examples] include (from n2t.net):
+Both the provider code and namespace disallow spaces or punctuation, only lowercase alphanumerical characters, underscores and dots are allowed.
+
+https://n2t.net/e/compact_ids.html[Examples] include (from n2t.net):
 
 		PDB:2gc4
 		Taxon:9606
@@ -44,35 +46,24 @@ https://n2t.net/e/compact_ids.html [Examples] include (from n2t.net):
 		ark:/47881/m6g15z54
 		IGSN:SSH000SUA
 
-.NOTE
+.Note: DRS Service Implementers Prefix Registration
 ****
-If your DRS implementation will issue IDs and pass around references with DRS URIs with compact identifiers you *must* register your prefix on identifiers.org/n2t.net otherwise DRS clients will not know how to resolve your compact identifiers and, ultimately, generate a DRS URL that can be accessed.
+If your DRS implementation will issue IDs and pass around DRS URIs using compact identifiers you *must* register your prefix on identifiers.org/n2t.net. If you don't, DRS clients will not know how to resolve your compact identifiers and, ultimately, generate a valid DRS URL that clients can access.
 ****
 
-Translating the identifiers.org/n2t.net to DRS URIs we get the following URI form:
+Translating the identifiers.org/n2t.net CURIE format to DRS URIs we get the following form:
 
     drs://[provider_code/]namespace:ID
 
-DRS URIs using compact identifiers with resolvers registered in identifiers.org/n2t.net
-can be distinguished from the hostname-based DRS URIs below based on the required ":"
-which is not allowed in hostname-based URI.
+TIP: DRS URIs using compact identifiers with resolvers registered in identifiers.org/n2t.net can be distinguished from the hostname-based DRS URIs below based on the required ":" which is not allowed in hostname-based URI.
 
-As mentioned in the DRS IDs section, when IDs from compact identifiers are
-used as DRS URIs they must be
+As mentioned in the DRS IDs section, when IDs from compact identifiers are used as DRS URIs they must be percent encoded.
 
-See the documentation on https://n2t.net/e/compact_ids.html[n2t.net] and
-https://docs.identifiers.org/[identifiers.org] for much more information on
-the compact identifiers used there and details about the resolution process.
-You can also register new prefixes or mirrors (additional resource providers).
+See the documentation on https://n2t.net/e/compact_ids.html[n2t.net] and https://docs.identifiers.org/[identifiers.org] for much more information on the compact identifiers used there and details about the resolution process. You can also register new prefixes or mirrors (additional resource providers).
 
----
-**NOTE**
-A DRS client identifies the a DRS URI using compact identifiers with the ":"
-character which is not allowed in provider_code, the namespace, or the ID.
-It is also not allowed in a Hostname-based DRS URI.
-Once the provider_code (optional) and namespace are extracted from a DRS URI,
-a client can use services on identifiers.org to identify available resolvers
-for example, for a Data GUID namespace:
+.Note: DRS Client Compact Identifier Resolution Process
+****
+A DRS client identifies the a DRS URI using compact identifiers with the ":" character which is not allowed in provider_code, the namespace, or the ID. It is also not allowed in a Hostname-based DRS URI. Once the provider_code (optional) and namespace are extracted from a DRS URI, a client can use services on identifiers.org to identify available resolvers for example, for a Data GUID namespace:
 
     GET https://registry.api.identifiers.org/restApi/namespaces/search/findByPrefix?prefix=dg
 
@@ -80,9 +71,7 @@ Followed by (assuming the prefix ID for Data GUIDs is 1234):
 
     GET https://registry.api.identifiers.org/restApi/resources/search/findAllByNamespaceId?id=1234
 
-This returns enough information to, ultimately, identify one or more resolvers and each
-have a URL prefix that, for DRS-supporting systems, tells how to make a successful DRS request.
-For example a DRS URI would look like:
+This returns enough information to, ultimately, identify one or more resolvers and each have a URL prefix that, for DRS-supporting systems, tells how to make a successful DRS request. For example a DRS URI would look like:
 
     drs://dg:4503/00e6cfa9-a183-42f6-bb44-b70347106bbe
 
@@ -96,12 +85,8 @@ And that can then be translated to:
 
 IDs in DRS URIs/URLs are always percent-encoded to eliminate ambiguity.
 
-**Please keep in mind identifiers.org/n2t.net does not support directly resolving URI encoded IDs.
- So we recommend this approach above to looking up resolvers on these registries and then making a valid
-DRS GET request directly.  This approach is also useful for caching resolvers since they are
-unlikely to change frequently.**
-
----
+**Please keep in mind identifiers.org/n2t.net does not support directly resolving URI encoded IDs. So we recommend this approach above to looking up resolvers on these registries and then making a valid DRS GET request directly.  This approach is also useful for caching resolvers since they are unlikely to change frequently.**
+****
 
 ==== Hostname-based DRS URIs
 
@@ -111,27 +96,16 @@ Strings of the form `drs://<server>/<id>` mean _“you can fetch the content wit
 
 For example, if a WES server was asked to process `drs://drs.example.org/314159`, it would know that it could issue a GET request to `https://drs.example.org/ga4gh/drs/v1/objects/314159` to learn how to fetch that object.
 
-The protocol is always https and the port is always the standard 443 SSL port.  It would
-be invalid to include, for example, a port in the DRS URI.
+The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include, for example, a port in the DRS URI.
 
-As with DRS URIs based on compact identifiers, the ID is percent-encoded to ensure special characters
-do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI.
+As with DRS URIs based on compact identifiers, the ID is percent-encoded to ensure special characters do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI.
 
-Hostname-based DRS URIs are less resistant to future project/domain name changes
-than compact identifiers.  But they do provide a more explicit way of pointing
-to a DRS object.  The fact that they can be resolved using a simple rule
-means a DRS client can skip the extra overhead of a DRS server lookup
-as is done for compact identifier-based URIs.  This can translate to
-greater performance also, possibly, security since it avoids the lookup of
-a resolver through a separate service (identifiers.org/n2t.net).
+Hostname-based DRS URIs are less resistant to future project/domain name changes than compact identifiers.  But they do provide a more explicit way of pointing to a DRS object.  The fact that they can be resolved using a simple rule means a DRS client can skip the extra overhead of a DRS server lookup as is done for compact identifier-based URIs.  This can translate to greater performance also, possibly, security since it avoids the lookup of a resolver through a separate service (identifiers.org/n2t.net).
 
----
-**NOTE**
-In the future, as newer versions of DRS are released, multiple versions of DRS may be supported on the same server.  Using the hostname in the DRS URI, plus information in the https://github.com/ga4gh-discovery/ga4gh-service-registry[service-registry] standard endpoint,
-which lead to https://github.com/ga4gh-discovery/ga4gh-service-info[service-info] endpoints, a client can discover enough information to
-translate a DRS URI into a valid URL.
-
----
+.Note: Service Registry/Info and Future Versions of DRS
+****
+In the future, as newer versions of DRS are released, multiple versions of DRS may be supported on the same server.  Using the hostname in the DRS URI, plus information in the https://github.com/ga4gh-discovery/ga4gh-service-registry[service-registry] standard endpoint, which lead to https://github.com/ga4gh-discovery/ga4gh-service-info[service-info] endpoints, a client can discover enough information to translate a DRS URI into a valid URL.
+****
 
 === DRS Datatypes
 
